tests/baselines/reference/gettersAndSettersErrors.errors.txt
==== tests/cases/compiler/gettersAndSettersErrors.ts (5 errors) ====
    class C {
        public get Foo() { return "foo";} // ok
        public set Foo(foo:string) {} // ok
    
        public Foo = 0; // error - duplicate identifier Foo - confirmed
               ~~~
!!! gettersAndSettersErrors.ts(5,12): error TS2000: Duplicate identifier 'Foo'.
        public get Goo(v:string):string {return null;} // error - getters must not have a parameter
               ~~~
!!! gettersAndSettersErrors.ts(6,12): error TS1054: 'get' accessor cannot have parameters.
        public set Goo(v:string):string {} // error - setters must not specify a return type
                                ~~~~~~~
!!! gettersAndSettersErrors.ts(7,29): error TS1094: Type annotation cannot appear on a 'set' accessor.
    }
    
    class E {
        private get Baz():number { return 0; }
                    ~~~
!!! gettersAndSettersErrors.ts(11,17): error TS2127: Getter and setter accessors do not agree in visibility.
        public set Baz(n:number) {} // error - accessors do not agree in visibility
                   ~~~
!!! gettersAndSettersErrors.ts(12,16): error TS2127: Getter and setter accessors do not agree in visibility.
    }
    
    
    